<resources>
    <string name="app_name">PokemonNFT</string>
    <string name="openlogin_client_id">BLuFw5PKj_iTQRX8aEPqa9Cxv6o-Lmto3_Ep6n7grB8jsQ8l-bCQKuAIubpLtGfrdDopbGtWdLeeQ639QdPsEi8</string>
    <string name="select_a_pokemon">Select a Pokemon</string>
    <string name="finding_player_loading_text">Finding player.Please wait...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup"><u>Signup</u></string>
    <string name="signup_btn_text">Signup</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="connect_wallet">Connect wallet</string>
    <string name="disconnect_wallet">Disconnect wallet</string>
    <string name="manage_wallet">Manage wallet</string>
    <string name="create_wallet">Create wallet</string>
    <string name="public_key">Public Key</string>
    <string name="mnemonic">Mnemonic</string>
    <string name="nft_pokemons">NFT Pokemons</string>
    <string name="buy_a_pokemon"><u>Buy a Pokemon!</u></string>
    <string name="mint_a_pokemon"><u>Mint a Pokemon!</u></string>
</resources>